# bevy-net-playground

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs
client/src/network/: events.rs  mod.rs  ui.rs
server/: Cargo.toml
server/src/: main.rs
server/src/network/: bind.rs  entity.rs  events.rs  mod.rs  replication.rs  room.rs  transform.rs
shared/: Cargo.toml
shared/src/: lib.rs  version.rs
shared/src/network/: auth.rs  mod.rs
shared/src/protocol/: auth.rs  bevy.rs  input.rs  mod.rs  movement.rs  transform.rs
