[package]
name = "playground_client"
version = "0.0.0"
edition = "2021"

[dependencies]
playground_shared = { path = "../shared" }
naia-bevy-client = { git = "https://github.com/Veritius/naia-changes.git", branch = "glam-and-bevy-tests", features = ["transport_udp"] }
bevy_egui = "0.20.0"

[features]
default = ["playground_shared/client"]