[package]
name = "playground_server"
version = "0.0.0"
edition = "2021"

[dependencies]
playground_shared = { path = "../shared" }
naia-bevy-server = { version = "0.21.0", features = ["transport_udp"] }
naia-server = { version = "0.21.0", features = ["transport_udp"] } # https://github.com/naia-lib/naia/issues/178