[package]
name = "playground_server"
version = "0.0.0"
edition = "2021"

[dependencies]
playground_shared = { path = "../shared" }
naia-bevy-server = { git = "https://github.com/Veritius/naia-changes.git", branch = "glam-and-bevy-tests", features = ["transport_udp"] }
naia-server = { git = "https://github.com/Veritius/naia-changes.git", branch = "glam-and-bevy-tests", features = ["transport_udp"] } # https://github.com/naia-lib/naia/issues/178