[package]
name = "playground_shared"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10", default-features = false, features = ["bevy_asset"]}
naia-bevy-shared = { git = "https://github.com/Veritius/naia-changes.git", branch = "glam-and-bevy-tests" }
once_cell = "1.17.1"
semver = "1.0.17"

[features]
# Allow enabling Bevy default features
client = ["bevy/default"]